package edu.mci.snacktrack.model;

public enum OrderStatus {
    PLACED,
    ACCEPTED,
    IN_PREPARATION,
    SHIPPED,
    ARRIVED
}
