classDiagram
    class Customer {
        customerId: Long
        firstName: String
        lastName: String
        email: String
        address: String
        orderHistory: List~Order~
    }

    class Restaurant {
        restaurantId: Long
        restaurantName: String
        cuisine: String
        email: String
        address: String
        vatNr: String
        menu: List~Dish~
    }

    class Order {
        orderID: Long
        customer: List~Customer~
        restaurant: List~Restaurant~
        orderedDishes: List~Dish~
        orderStatus: Enum
        createdAt: LocalDateTime
    }

    class Dish {
        dishId: Long
        dishName: String
        dishDescription: String
        price: float
        calories: Calorie
        protien: int
        category: List~String~
    }

    class Calories {
        caloriesInKcal: int
        caloriesInKJoule: int
    }

    class Orderstatus {
        PLACED
        ACCEPTED
        IN_PREPERATION
        SHIPPED
        ARRIVED
    }


    Customer --> Order
    Restaurant --> Dish
    Order --> Dish
    Order -- Orderstatus
    Dish -- Calories